# life-xp

./: .gitignore  README.md  pyproject.toml
LifeXP/: project.yml
LifeXP/LifeXP/: ContentView.swift  Info.plist  LifeXP.entitlements  LifeXPApp.swift
LifeXP/LifeXP.xcodeproj/: project.pbxproj
LifeXP/LifeXP.xcodeproj/xcshareddata/xcschemes/: LifeXP.xcscheme  LifeXPWidgetExtension.xcscheme
LifeXP/LifeXP/Views/: SettingsView.swift  StepsView.swift  WeightView.swift
LifeXP/LifeXPWidget/: Info.plist  LifeXPWidgetBundle.swift  StepsWidget.swift  WeightWidget.swift
LifeXP/Shared/: DataStore.swift  Models.swift  WithingsAPI.swift
electron/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json
electron/src/main/: index.js  index.ts  preload.js
electron/src/renderer/: App.tsx  app.js  index.html
electron/src/renderer/api/: client.ts
electron/src/renderer/components/: DailyTasks.tsx  HabitGrid.tsx  Layout.tsx  Sparkline.tsx  XPBar.tsx
electron/src/renderer/pages/: Dashboard.tsx  Goals.tsx  Habits.tsx  Quests.tsx  Rewards.tsx  TrayDashboard.tsx
electron/src/renderer/styles/: app.css  globals.css
electron/src/renderer/types/: index.ts
life_xp/: __init__.py  achievements.py  api.py  cli.py  coach.py  database.py  engine.py  models.py  quests.py  streaks.py  token_refresh.py  xp.py
life_xp/agent/: loop.py  sensor_builder.py  tools.py
life_xp/notifications/: __init__.py
life_xp/sensors/: __init__.py  api_sensor.py  base.py  cli_sensor.py  custom_loader.py  finance.py  git_sensor.py  health.py  imessage.py  screentime.py  steps.py
life_xp/swift_helpers/: health_reader.swift
life_xp/ui/: __init__.py  dashboard.py  habit_grid.py  progress.py
(+2 files in other folders)
